force-app/main/default/objects/SWIFT_connection_details__mdt/SWIFT_connection_details__mdt.object-meta.xml
<CustomObject>
    <description>CDCS-135 Details for making callouts to payment tracking SWIFT API</description>
    <label>SWIFT connection details</label>
    <pluralLabel>SWIFT connections details</pluralLabel>
</CustomObject>