force-app/main/default/objects/SWIFT_connection_details__mdt/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <description>CDCS-135 - parameter used for authenticating requests</description>
    <label>Application Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>