force-app/main/default/objects/SWIFT_connection_details__mdt/fields/Host_SWIFT__c.field-meta.xml
<CustomField>
    <fullName>Host_SWIFT__c</fullName>
    <description>CDCS-135 Parameter used for authenticating requests. Host on the request changes after request goes through the DataPower. New value has to be used to create authentication token.</description>
    <label>Host SWIFT</label>
    <required>true</required>
    <type>Url</type>
</CustomField>