force-app/main/default/objects/SWIFT_connection_details__mdt/fields/JWT_Header__c.field-meta.xml
<CustomField>
    <fullName>JWT_Header__c</fullName>
    <description>CDCS-135 Parameter used for authenticating requests</description>
    <label>JWT Header</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>