force-app/main/default/objects/SWIFT_connection_details__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>CDCS-135 This field holds named credential’s name used as endpoint on http requests.</description>
    <label>Named Credential</label>
    <length>100</length>
    <type>Text</type>
</CustomField>