force-app/main/default/objects/SWIFT_connection_details__mdt/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>CDCS-135 This field holds the path used in http request’s endpoint.</description>
    <label>Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>