force-app/main/default/objects/SWIFT_connection_details__mdt/fields/Profile_Id_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id_Tracker__c</fullName>
    <description>CDCS-135 Parameter used for authentication</description>
    <label>Profile Id Tracker</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>