force-app/main/default/objects/SWIFT_connection_details__mdt/fields/Shared_Secret__c.field-meta.xml
<CustomField>
    <fullName>Shared_Secret__c</fullName>
    <description>CDCS-135 Parameter used for authentication</description>
    <label>Shared Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>